--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "tester-/test_project",
     "require": {
-        "monolog/monolog": "1.0.*"
+        "monolog/monolog": "1.0.*",
+        "php": ">=5.5.5"
     }
 }
